--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,7 @@ button {
     overflow: hidden;
     border-radius: 45px;
     box-shadow: 0 5px;
-    margin-top: 3%;
+    margin-bottom: 3%;
   }
   button:hover {
     background-color: #ededed;
