--- a/css/index.css
+++ b/css/index.css
@@ -33,12 +33,17 @@ body {
 h1 {
     font-size: 7.4em;
     font-weight: bold;
+    color:
 }
 
 h2 {
     font-size: 3em;
     font-weight: bold;
     text-align: center;
+}
+
+h3 {
+    font-size: 1em;
 }
 
 p {
@@ -67,6 +72,10 @@ button {
     /* color: #2fB8BE; */
 }
 
+footer {
+    text-align: center;
+}
+
 /* .parallax {
 
   background-image: url("/img/blank-card-cellphone-1851415.jpg");
@@ -76,3 +85,26 @@ button {
   background-repeat: no-repeat;
   background-size: cover;
 }  */
+
+@media (max-width: 500px) {
+    body {
+        max-width: 500px;
+    }
+    .bodyarea {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .chatting {
+        width: 100%;
+        height: 100%;
+    }
+    .excluding {
+        font-size: 75%;
+    }
+    button {
+        margin-bottom: 5%;
+    }
+    footer {
+        margin-top: 10%;
+    }
+  }
