--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Quicksand', sans-serif;
     /* background: #8b90c6; */
+    /* background: rgba(139, 144, 198, 0.2); */
     /* overflow: hidden; */
 }
 
@@ -16,6 +17,11 @@ body {
     font-weight: bold;
     font-size: 250%;
     letter-spacing: -5px;
+}
+
+.chatting {
+    border-bottom-right-radius: 5%;
+    
 }
 
 .bodyarea {
@@ -43,6 +49,11 @@ h2 {
 
 h3 {
     font-size: 1em;
+}
+
+h4 {
+    font-size: 2em;
+    text-align: center; 
 }
 
 p {
@@ -80,15 +91,42 @@ button {
 .middle {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-top: 5%;
 }
 
 .middle1 {
-    padding: 20px 40px;
-    width: 25%;
+    padding: 0% 2%;
+    width: 32%;
     line-height: 20px;
-    align-self: center;
+    align-self: flex-end;
+}
+
+.theh2 {
+    margin-top: 3%;
+}
+
+.aboutUs {
+    display: flex;
+    flex: grow;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.prop {
+    padding: 20px 10px;
+    width: 30%;
+    line-height: 20px;
+}
+
+.profilepic {
+    width: 50%;
+    height: auto;
+    border-radius: 80%;
+    margin-left: 25%;
+}
+.fab {
+    margin-left: 49%;
 }
 
 
@@ -97,6 +135,7 @@ button {
 
 footer {
     text-align: center;
+    margin-top: 7%;
 }
 
 
@@ -117,6 +156,9 @@ footer {
     body {
         max-width: 500px;
     }
+    .container {
+        max-width: 500px;
+    }
     .bodyarea {
         display: flex;
         flex-wrap: wrap;
@@ -128,10 +170,52 @@ footer {
     .excluding {
         font-size: 75%;
     }
+    .middle1 {
+        width: 100%;
+    }
+    .followers {
+        padding-left: 25%;
+    }
+    .prop {
+        width: 100%;
+    }
     button {
         margin-bottom: 5%;
     }
     footer {
         margin-top: 10%;
     }
+
   }
+
+
+@media (max-width: 800px) {
+    body {
+        max-width: 800px;
+    }
+    .container {
+        max-width: 800px;
+    }
+    .bodyarea {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .chatting {
+        width: 100%;
+        height: 100%;
+    }
+    .excluding {
+        font-size: 75%;
+    }
+    .middle {
+        margin-top: 5%;
+    }
+    .middle1 {
+        width: 100%;
+        line-height: 20px;
+        align-self: center;
+    }
+    .followers {
+        margin-left: 10%;
+    }
+}
