--- a/css/index.css
+++ b/css/index.css
@@ -124,7 +124,7 @@ button {
 .prop {
     padding: 20px 10px;
     width: 30%;
-    line-height: 20px;
+    line-height: 30px;
 }
 
 .profilepic {
@@ -182,7 +182,9 @@ footer {
         width: 100%;
     }
     .followers {
-        padding-left: 25%;
+        padding-right: 12%;
+        width: 85%;
+        height: auto;
     }
     .prop {
         width: 100%;
@@ -220,8 +222,9 @@ footer {
     }
     .middle1 {
         width: 100%;
-        line-height: 20px;
+        line-height: 30px;
         align-self: center;
+        padding: 0% 15%;
     }
     .followers {
         margin-left: 10%;
