--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@ body {
 
 .bodyarea {
     display: flex;
-    background: rgba(139, 144, 198, 0.2);
+    background: rgba(139, 144, 198, .2);
 }
 
 .container2 {
