--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@ body {
 
 .container2 {
     background: rgba(139, 144, 198, 0.2); 
-    border-radius: 5%;
+    border-radius: 25px;
     box-shadow: 5px 10px rgba(139, 144, 198, 0.4);
 }
 
@@ -176,13 +176,11 @@ footer {
     .excluding {
         font-size: 75%;
     }
-    .middle1 {
-        width: 100%;
+    .middle {
+        flex-direction: column;
     }
-    .followers {
-        padding-right: 12%;
-        width: 85%;
-        height: auto;
+    .middle1 {
+        display: row
     }
     .prop {
         width: 100%;
@@ -204,6 +202,9 @@ footer {
     .container {
         max-width: 800px;
     }
+    .container2 {
+        border-radius: 15px;
+    }
     .bodyarea {
         display: flex;
         flex-wrap: wrap;
@@ -217,6 +218,7 @@ footer {
     }
     .middle {
         margin-top: 5%;
+        flex-direction: column;
     }
     .middle1 {
         width: 100%;
@@ -225,7 +227,7 @@ footer {
         padding: 0% 15%;
     }
     .followers {
-        margin-left: 10%;
+        margin-left: 2%;
     }
 }
 
