--- a/css/index.css
+++ b/css/index.css
@@ -232,8 +232,9 @@ footer {
 }
 
 
+/*======= Animations Below=====*/
 
-/* trying out*/
+/* trying out bubbles*/
 #bubbles { height: 100% }
 #bubbles { padding: 100px 0 }
 .bubble {
@@ -245,7 +246,7 @@ footer {
 }
 
 .x1 {
-
+    left: 75%;
     transform: scale(0.9);
     opacity: 0.2;
     -webkit-animation: moveclouds 21s linear infinite, sideWays 4s ease-in-out infinite alternate;
@@ -256,7 +257,7 @@ footer {
     left: 38%;
     transform: scale(0.6);
     opacity: 0.5;
-    -webkit-animation: moveclouds 20s linear infinite, sideWays 5s ease-in-out infinite alternate;
+    -webkit-animation: moveclouds 8s linear infinite, sideWays 5s ease-in-out infinite alternate;
 
 }
 .x3 {
@@ -278,6 +279,13 @@ footer {
     transform: scale(.8);
     opacity: 0.3; 
     -webkit-animation: moveclouds 18s linear infinite, sideWays 1s ease-in-out infinite alternate;
+
+}
+.x6 {
+    left: 86%;
+    transform: scale(0.9);
+    opacity: 0.2;
+    -webkit-animation: moveclouds 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
 
 }
 @-webkit-keyframes moveclouds { 
