--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,10 @@ h4 {
     font-size: 2em;
     text-align: center; 
 }
+h5 {
+    font-size: 1em;
+}
+
 
 p {
     font-size: 1.5em;
@@ -299,3 +303,32 @@ footer {
 
 
 
+/* For Vic's stuff*/
+
+.school {
+    color: #2fB8BE;
+    text-align: center;
+}
+
+.school h1 {
+    font-size: 5.5em;
+}
+
+.subjects {
+    display: flex;
+    justify-content: center;
+}
+
+.subjects h3 {
+    margin: 45px 50px;
+}
+
+.marginspace {
+    text-align: center;
+    margin-top: 1.75%;
+    color: #485161;
+}
+
+.active {
+    color: #ea5692;
+}
