--- a/css/index.css
+++ b/css/index.css
@@ -79,14 +79,16 @@ button {
     background-color: #ffffff;
     color: #485161;
     overflow: hidden;
-    border-radius: 45px;
+    border-radius: 15px;
     box-shadow: 0 5px;
     margin-bottom: 3%;
   }
-  button:hover {
+  /* button:hover {
     background-color: #ffffff;
     color: #2fB8BE;
-}
+} */
+
+
 
 .followers {
     width: 100%;
