--- a/css/index.css
+++ b/css/index.css
@@ -116,6 +116,9 @@ button {
     text-align: justify;
     margin-top: 10%
 }
+.theh2 {
+    margin-top: 5%;
+}
 
 .aboutUs {
     display: flex;
@@ -312,7 +315,7 @@ footer {
 
 
 
-/* For Vic's stuff*/
+/* For Vic's stuff
 
 .school {
     color: #2fB8BE;
@@ -341,3 +344,6 @@ footer {
 .active {
     color: #ea5692;
 }
+*/
+
+
